; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_pci_valid_pba_offset.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_pci_valid_pba_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_devinst = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_devinst*, i64)* @pci_valid_pba_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_valid_pba_offset(%struct.pci_devinst* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pci_devinst*, align 8
  %5 = alloca i64, align 8
  store %struct.pci_devinst* %0, %struct.pci_devinst** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.pci_devinst*, %struct.pci_devinst** %4, align 8
  %8 = getelementptr inbounds %struct.pci_devinst, %struct.pci_devinst* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp slt i64 %6, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

13:                                               ; preds = %2
  %14 = load i64, i64* %5, align 8
  %15 = load %struct.pci_devinst*, %struct.pci_devinst** %4, align 8
  %16 = getelementptr inbounds %struct.pci_devinst, %struct.pci_devinst* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load %struct.pci_devinst*, %struct.pci_devinst** %4, align 8
  %20 = getelementptr inbounds %struct.pci_devinst, %struct.pci_devinst* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = trunc i64 %22 to i32
  %24 = zext i32 %23 to i64
  %25 = add nsw i64 %18, %24
  %26 = icmp sge i64 %14, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %29

28:                                               ; preds = %13
  store i32 1, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %27, %12
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
